--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Instalar Jest
       run:  npm install -g jest
     - name: Executar testes
-      run:  jest --coverage --forceExit
+      run:  jest --coverage --runInBand --detectOpenHandles --forceExit
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
